[project]
name = "maze-runner"
version = "0.1.0"
description = "Synthetic FSM benchmark for evaluating LLM navigation with prerequisites and safety constraints"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "instructor",
    "openai",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "typer>=0.24.1",
]
